Content to full width when responsive < 1500px. Fixed overflow on recipe sticker. Search bar separated when not in full width.

--- a/public/frontend/styles/site/bars.less
+++ b/public/frontend/styles/site/bars.less
@@ -65,6 +65,12 @@
   }
 }
 
+@media only screen and (min-width : 1500px) {
+  #search-bar {
+    padding: 20px 0;
+  }
+}
+
 /****************
   Social Bar Styles
 ****************/
