--- a/public/frontend/styles/site/common.less
+++ b/public/frontend/styles/site/common.less
@@ -146,3 +146,33 @@ h2 {
     margin-top: 0;
   }
 }
+
+/********************************
+        New media queries
+********************************/
+
+@media only screen and (max-width : 991px) {
+  .ui.page.grid {
+    padding: 0%;
+  }
+}
+@media only screen and (min-width : 992px) {
+  .ui.page.grid {
+    padding: 0%;
+  }
+}
+@media only screen and (min-width : 1500px) {
+  .ui.page.grid {
+    padding: 0% 13%;
+  }
+}
+@media only screen and (min-width : 1750px) {
+  .ui.page.grid {
+    padding: 0% 18%;
+  }
+}
+@media only screen and (min-width : 2000px) {
+  .ui.page.grid {
+    padding: 0% 23%;
+  }
+}
