--- a/public/frontend/styles/site/recipes.less
+++ b/public/frontend/styles/site/recipes.less
@@ -51,12 +51,12 @@
     .title {
       height: 100%;
       position: relative;
+      overflow: hidden;
 
       img {
         position: absolute;
         bottom: 20px;
-        width: 100%;
-        max-width: none;
+        width: 97%;
       }
 
       .text {
